@@ -12,6 +12,7 @@ Sigil-1.8.0
      - Fix double copy to Clipboard from OPF and NCX Tabs
      - Fix GoToLinkOrStyle when class attribute present but cursor not in the class attribute
      - Fix TabManager scroll to position to properly handle position of 0
+     - Fix crash using Split At Markers when body tag is completely empty (no whitespace or anything)
 
     New Features:
      - BookBrowser can now link javascripts similarly to how it links stylesheets
